# gina

./: .bzrignore  .gitignore  HACKING  INSTALL  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac
doc/: gina.1
src/: .gitignore  ginanote.vala
